# jcli

./: .gitignore  .pre-commit-config.yaml  LICENSE  PKGBUILD  README.md  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: bump.yaml  pre-commit.yaml  publish.yaml
jcli/: cli.py  config.py  version.py
tests/: test_jcli.py
