[tool.poetry]
name = "jenkins-job-cli"
version = "0.2.0"
description = "Jcli: list, run, and check jenkins jobs"
authors = ["Brokenpip3 <brokenpip3@gmail.com>"]
license = "MIT"
repository = "https://github.com/brokenpip3/jcli"
readme = "README.md"
packages = [
    {include = "jcli"}
]

[tool.poetry.scripts]
jcli = "jcli.cli:main"

[tool.poetry.dependencies]
python = "^3.8"
api4jenkins = "^1.9"
rich = ">=12,<14"
click = "^8.0.4"
appdirs = "^1.4.4"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
mock = "^5.0.1"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
