[tool.poetry]
name = "jenkins-job-cli"
version = "0.3.8"
description = "Jcli: Alternative Jenkins CLI written in Python"
authors = ["Brokenpip3 <brokenpip3@gmail.com>"]
license = "MIT"
repository = "https://github.com/brokenpip3/jcli"
readme = "README.md"
packages = [
    {include = "jcli"}
]

[tool.poetry.scripts]
jcli = "jcli.cli:main"

[tool.poetry.dependencies]
python = "^3.8"
api4jenkins = ">=1.9,<3.0"
rich = ">=12,<14"
click = "^8.0.4"
appdirs = "^1.4.4"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
mock = "^5.1.0"
pytest = "^8.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
